Tests enabling skipWriteConflictRetries failpoint incompatible with index build abort

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution NAMER
    • Fully Compatible
    • ALL
    • Execution NAMR Team 2023-09-04
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Index builds handle WriteConflicts while aborting, and it is not expected that the operation fails as it means the index build ended up partially teared down, triggering this fassert.

      The initial sync fuzzer, and potentially other tests, enable the skipWriteConflictRetries and can trigger the fassert.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Yujin Kang Park
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: