SERVER-79123 add warning message during index build abort for write conflict in test environment